- 예민한 정보 삭제

--- a/.env
+++ b/.env
@@ -8,9 +8,9 @@ NODE_PORT=8080
 COOKIE_SECRET=jirareport
 
 # JIRA ENV
-JIRA_URL=http://jira.duzon.com:8080/
+JIRA_URL=http://jira.ballboy.com:8080/
 JIRA_API_TOKEN=
-JIRA_ID=temp@douzone.com
+JIRA_ID=temp@ballboy.com
 JIRA_PASSWORD=tempPassword
 
 # PIMS DB ENV
@@ -35,8 +35,8 @@ REPORT_DATABASE=jirareport
 # JIRAREPORT_DATABASE=jiraReport 
 
 # AMARANTH10 ENV
-# AMARANTH_URL=https://gwa.douzone.com # 사내 그룹웨어 주소
-AMARANTH_URL=https://dev.douzone.com # 그룹웨어 개발 서버 주소
+# AMARANTH_URL=https://gwa.ballboy.com # 사내 그룹웨어 주소
+AMARANTH_URL=https://dev.ballboy.com # 그룹웨어 개발 서버 주소
 AMARANTH_GROUP_SEQ=tempGroupSeq
 AMARANTH_CALLER_NAME=tempCallerName
 AMARANTH_ACCESS_TOKEN=tempToken
